<!--
  ~ Copyright (c) 2015-2018, Virgil Security, Inc.
  ~
  ~ Lead Maintainer: Virgil Security Inc. <support@virgilsecurity.com>
  ~
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without
  ~ modification, are permitted provided that the following conditions are met:
  ~
  ~     (1) Redistributions of source code must retain the above copyright notice, this
  ~     list of conditions and the following disclaimer.
  ~
  ~     (2) Redistributions in binary form must reproduce the above copyright notice,
  ~     this list of conditions and the following disclaimer in the documentation
  ~     and/or other materials provided with the distribution.
  ~
  ~     (3) Neither the name of virgil nor the names of its
  ~     contributors may be used to endorse or promote products derived from
  ~     this software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  ~ AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  ~ IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~ DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
  ~ FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  ~ DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  ~ SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
  ~ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  ~ OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<resources>

    <string name="user_pic">User picture</string>
    <string name="create_your_account">Create your account</string>
    <string name="few_seconds">It take a few seconds</string>
    <string name="create_new_account">Create new account</string>
    <string name="by_registering">By registering, you agree to Virgil\'s </string>
    <string name="and">and </string>
    <string name="terms_of_service"><a href="https://virgilsecurity.com/terms-of-service/">Terms of Service</a></string>
    <string name="privacy_policy"><a href="https://virgilsecurity.com/privacy-policy/">Privacy Policy</a></string>
    <string name="next">Next</string>
    <string name="username">Username</string>
    <string name="pick_a_username">Pick a username</string>
    <string name="error_loading_users">Error loading users</string>
    <string name="no_users">Error loading users</string>
    <string name="already_registered">Already registered</string>
    <string name="try_again_please">Try again, please</string>
    <string name="registration">Registration</string>

</resources>
