<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015-2018, Virgil Security, Inc.
  ~
  ~ Lead Maintainer: Virgil Security Inc. <support@virgilsecurity.com>
  ~
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without
  ~ modification, are permitted provided that the following conditions are met:
  ~
  ~     (1) Redistributions of source code must retain the above copyright notice, this
  ~     list of conditions and the following disclaimer.
  ~
  ~     (2) Redistributions in binary form must reproduce the above copyright notice,
  ~     this list of conditions and the following disclaimer in the documentation
  ~     and/or other materials provided with the distribution.
  ~
  ~     (3) Neither the name of virgil nor the names of its
  ~     contributors may be used to endorse or promote products derived from
  ~     this software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  ~ AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  ~ IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~ DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
  ~ FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  ~ DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  ~ SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
  ~ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  ~ OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <FrameLayout
        android:id="@+id/flUserPic"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:elevation="2dp"
        android:layout_marginStart="@dimen/login_left_new_user"
        android:background="@drawable/rect_rounded_gradient_2"
        app:layout_constraintBottom_toTopOf="@id/tvCreateAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageView
            android:id="@+id/ivUserPic"
            android:layout_width="44dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:contentDescription="@string/user_pic"
            android:src="@drawable/ic_person" />
    </FrameLayout>


    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_left_new_user"
        android:layout_marginTop="18dp"
        android:text="@string/create_your_account"
        android:textColor="@color/snow"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/tvFewSeconds"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flUserPic" />

    <TextView
        android:id="@+id/tvFewSeconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_left_new_user"
        android:layout_marginTop="10dp"
        android:text="@string/few_seconds"
        android:textColor="@color/snow"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/btnCreateNewAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCreateAccount" />

    <TextView
        android:textAllCaps="true"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/btnCreateNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_left_new_user"
        android:layout_marginTop="70dp"
        android:background="@drawable/rect_rounded_2"
        android:elevation="2dp"
        android:minHeight="36dp"
        android:paddingEnd="@dimen/default_margin"
        android:paddingStart="@dimen/default_margin"
        android:text="@string/create_new_account"
        android:textColor="@color/snow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFewSeconds" />

</android.support.constraint.ConstraintLayout>